# CrossRIE

./: .gitignore  LICENSE  README.md  environment.yml  my_test.ipynb  pyproject.toml  setup_env.py  verification_script.py
ccc/: __init__.py  custom_layers.py  layers.py
crossrie/: __init__.py  custom_layers.py  layer.py
crossrie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ccc/: __init__.py  model.py
src/ccc.egg-info/: PKG-INFO  SOURCES.txt
tests/: data_generator.py  test_api_misuse.py  test_crossrie.py  test_edge_cases.py  test_model.py  test_serialization.py  test_svd_gradient.py
