[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crossrie"
version = "0.1.0"
description = "Cross Covariance Cleaning package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "tensorflow>=2.10.0",
    "keras>=3.0.0",
    "numpy>=1.24.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scipy>=1.10.0",
]

[project.urls]
"Homepage" = "https://github.com/Efstratios7/CrossRIEnet"
"Bug Tracker" = "https://github.com/Efstratios7/CrossRIEnet/issues"

[tool.setuptools.packages.find]
include = ["crossrie*"]
